src/test/resources/org/nest/spl/_cocos/invalid/illegalVarInFor.simple
module org.nest.spl._cocos.illegalVarInFor
x boolean
for x in 1 ... 5 :

end

xx real
for xx in "Bob" ... 5 :

end

for xx in 1 ... true :

end